testsuite/poke.pkl/postincr-diag-4.pk
/* { dg-do compile } */

lambda void:{}++; /* { dg-error "invalid operand" } */
